# Forecast-Electricity

./: .cache.sqlite  .dockerignore  .env.example  .gitignore  Dockerfile  Electricity_Load_Forecasting_Technical_Documentation_Formatted.docx  README.md  cloudbuild.yaml  current_cluster_forecasting.csv  daily_price_forecast.csv  docker-compose.yml  energy_forecasting.ipynb  omie_marginal_price.csv  pyproject.toml  requirements.txt
Outputs_temp/: best_models_per_client.csv  client_1day_ahead_forecast.csv  client_cluster_features.csv  client_model_metrics.csv  cluster_model_scores.csv  leaderboard.csv  lgb.pkl  model_metrics.csv  routing_table.csv  tft-best.ckpt  ui_predictions.csv  xgb.pkl
app/: main.py
app/api/: routes.py
app/core/: config.py
app/prompts/: system_prompt.txt
app/services/: artifact_store.py  dual_forecast_store.py  router.py
app/services/llm/: ollama.py
app/static/: app.js  dashboard.js  improvements.html  improvements.js  index.html  styles.css
outputs/: final_2014_12_31_hourly_all_models.csv  final_2014_12_31_model_comparison.csv  final_2014_12_31_per_client_mae.csv  final_2014_client_selected_models.csv  final_2014_selected_model_counts.csv
scripts/: build_artifacts.py  build_stub_artifacts.py  final_2014_day_benchmark.py  generate_synthetic_forecasts.py  regenerate_client_routing.py
